<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.language.AddLanguageFragment">

    <LinearLayout
        android:id="@+id/input_with_btn_layout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center_horizontal"
        android:orientation="vertical"
        android:paddingTop="15dp"
        tools:layout_editor_absoluteX="100dp"
        tools:layout_editor_absoluteY="-26dp">

        <EditText
            android:id="@+id/new_language_field"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@color/input_color"
            android:layout_marginTop="25dp"
            android:ems="10"
            android:inputType="text"
            android:textIsSelectable="true"
            android:text="" />

        <Button
            android:id="@+id/add_language_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="30dp"
            android:backgroundTint="@color/button_color"
            android:text="Add"
            app:layout_constraintStart_toEndOf="@+id/new_language_field" />

        <LinearLayout
            android:layout_width="250dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:layout_marginBottom="30dp"
            android:padding="5dp"
            android:background="@drawable/table"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="5dp"
                android:background="@drawable/table_inner"
                android:orientation="vertical"
                >

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/languages"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:overScrollMode="ifContentScrolls"
                android:textAlignment="center"
                android:visibility="visible"
                tools:visibility="visible"/>

        </LinearLayout>
        </LinearLayout>

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>